--- a/Materialistic.theme.css
+++ b/Materialistic.theme.css
@@ -5,7 +5,7 @@
  * @description A clean material design theme for discord with a simple accent color
 */
 
-@import url('https://booglesmcgee.github.io/Materialistic Discord/Materialistic.css');
+@import url('https://raw.githubusercontent.com/4ronse/ModedMaterialistic/master/Materialistic.css');
 :root {
 	/* --accent-color-main: #b288e6c9; */
 	--accent-color-main: #b00020;
