--- a/Materialistic.theme.css
+++ b/Materialistic.theme.css
@@ -1,8 +1,8 @@
 /**
- * @name Materialistic
- * @author BigMeanie
+ * @name Materialistic - edited by me :)
+ * @author 4ronse
  * @version 1.0.0
- * @description A clean material design theme for discord with a simple accent color
+ * @description Thanks BigMeanie A clean material design theme for discord with a simple accent color
 */
 
 @import url('https://raw.githubusercontent.com/4ronse/ModedMaterialistic/master/Materialistic.css');
